--- a/SubtitleAPI/SubtitleAPI.cfg
+++ b/SubtitleAPI/SubtitleAPI.cfg
@@ -33,12 +33,12 @@
 -K$00400000
 -E"..\Bin\SubtitleAPI"
 -N"DCU"
--LE"c:\program files\borland\delphi7\Projects\Bpl"
--LN"c:\program files\borland\delphi7\Projects\Bpl"
--U"..\Lib;c:\program files\borland\delphi7\Lib\Debug"
--O"..\Lib;c:\program files\borland\delphi7\Lib\Debug"
--I"..\Lib;c:\program files\borland\delphi7\Lib\Debug"
--R"..\Lib;c:\program files\borland\delphi7\Lib\Debug"
+-LE"c:\program files (x86)\borland\delphi7\Projects\Bpl"
+-LN"c:\program files (x86)\borland\delphi7\Projects\Bpl"
+-U"..\Lib;c:\program files (x86)\borland\delphi7\Lib\Debug"
+-O"..\Lib;c:\program files (x86)\borland\delphi7\Lib\Debug"
+-I"..\Lib;c:\program files (x86)\borland\delphi7\Lib\Debug"
+-R"..\Lib;c:\program files (x86)\borland\delphi7\Lib\Debug"
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
 -w-UNSAFE_CAST
