--- a/SubtitleWorkshop.cfg
+++ b/SubtitleWorkshop.cfg
@@ -33,8 +33,8 @@
 -K$00400000
 -E"Bin"
 -N"DCU"
--LE"c:\program files\borland\delphi7\Projects\Bpl"
--LN"c:\program files\borland\delphi7\Projects\Bpl"
+-LE"c:\program files (x86)\borland\delphi7\Projects\Bpl"
+-LN"c:\program files (x86)\borland\delphi7\Projects\Bpl"
 -U"SWComponents\Sources"
 -O"SWComponents\Sources"
 -I"SWComponents\Sources"
